# hsdlib

./: .clang-tidy  .editorconfig  .gitignore  CONTRIBUTING.md  Doxyfile  Makefile  README.md  build.zig  codecov.yml  logo.dot  pyproject.toml  setup.py  test_makefile.sh
.github/workflows/: benches_aarch64.yml  benches_amd64.yml  lints.yml  publish_cdoc.yml  publish_py.yml  tests.yml  tests_aarch64.yml  tests_amd64.yml  tests_arm.yml  tests_make.yml  tests_py.yml
benches/: README.md
benches/c/: bench_common.h  bench_cosine_f32.c  bench_dot_f32.c  bench_hamming_u8.c  bench_jaccard_u16.c  bench_manhattan_f32.c  bench_sqeuclidean_f32.c
benches/py/: hsdlib_vs_np.py
bindings/python/: README.md
bindings/python/hsdpy/: __init__.py  _ctypes_bindings.py
bindings/python/tests/: conftest.py  test_hsdpy.py
examples/: README.md  hsdlib_example.c  hsdpy_example.py
include/: hsdlib.h
python/: README.md
python/hsdpy/: __init__.py  _ctypes_bindings.py
python/tests/: test_hsdpy.py
src/: cosine.c  dot.c  euclidean.c  hamming.c  jaccard.c  manhattan.c  utils.c  vector_ops.c
src/distance/: euclidean.c  hamming.c  manhattan.c
src/similarity/: cosine.c  dot.c  jaccard.c
tests/: main.c  test_common.c  test_common.h  test_cosine.c  test_dot.c  test_euclidean.c  test_hamming.c  test_hsdlib_h.c  test_jaccard.c  test_manhattan.c  test_utils.c  test_vector_ops.c
