[project]
name = "hsdpy"
version = "0.1.0"
description = "Python bindings for the Hsdlib library"
authors = [
    { name = "Hassan Abedi", email = "hassan.abedi.t+hsdlib@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.0",
]

[project.urls]
Repository = "https://github.com/habedi/hsdlib"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=5.1.0",
    "mypy>=1.11.1",
    "ruff>=0.9.3",
    "scipy>=1.15.2",
    "build>=1.2.2.post1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hsdpy"]
package-dir = { "" = "python" }

[tool.setuptools.package-data]
hsdpy = ["*.so", "*.dylib", "*.dll"]
