[project]
name = "hsdpy"
version = "0.1.0-beta.3"
description = "Python bindings for the Hsdlib library"
authors = [
    { name = "Hassan Abedi", email = "hassan.abedi.t+hsdlib@gmail.com" },
]
requires-python = ">=3.10"
readme = "bindings/python/README.md"
license = { text = "MIT" }
keywords = ["python binding", "simd", "distance metrics", "similarity measures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.391",
    "ruff>=0.9.3",
    "scipy>=1.15.2",
]

[project.urls]
Repository = "https://github.com/habedi/hsdlib"
Issues = "https://github.com/habedi/hsdlib/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "build>=1.2.2.post1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hsdpy"]
package-dir = { "" = "bindings/python" }

[tool.setuptools.package-data]
hsdpy = ["*.so", "*.dylib", "*.dll"]

[tool.pyright]
include = ["bindings/python/hsdpy", "bindings/python/tests"]
venvPath = "."
venv = ".venv"
strict = ["bindings/python/hsdpy/*.py"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]

[tool.ruff]
line-length = 100
target-version = "py310"
